[gd_scene load_steps=33 format=2]

[ext_resource path="res://Assets/Script/Zombie Impulse.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprite/Zombie Impulse/attack/zombie-attack_02.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprite/Zombie Impulse/attack/zombie-attack_00.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprite/Zombie Impulse/attack/zombie-attack_05.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprite/Zombie Impulse/attack/zombie-attack_03.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprite/Zombie Impulse/attack/zombie-attack_04.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprite/Zombie Impulse/attack/zombiebasic.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprite/Zombie Impulse/idle/zombie-idle_02.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprite/Zombie Impulse/idle/zombie-idle_05.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprite/Zombie Impulse/idle/zombie-idle_04.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprite/Zombie Impulse/idle/zombie-idle_01.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprite/Zombie Impulse/idle/zombie-idle_03.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprite/Zombie Impulse/idle/zombie-idle_00.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprite/Zombie Impulse/attack/zombie-attack_06.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprite/Zombie Impulse/attack/zombie-attack_07.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprite/Zombie Impulse/attack/zombie-attack_01.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprite/Zombie Impulse/attack/zombie-attack_08.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprite/Zombie Impulse/dead/zombie-dead_01.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprite/Zombie Impulse/dead/zombie-dead_00.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprite/Zombie Impulse/dead/zombie-dead_02.png" type="Texture" id=20]
[ext_resource path="res://Assets/Sprite/Zombie Impulse/dead/zombie-dead_04.png" type="Texture" id=21]
[ext_resource path="res://Assets/Sprite/Zombie Impulse/dead/zombie-dead_03.png" type="Texture" id=22]
[ext_resource path="res://Assets/Sounds/Impact Bullet.wav" type="AudioStream" id=23]
[ext_resource path="res://Assets/Sounds/Impulse.wav" type="AudioStream" id=24]

[sub_resource type="CircleShape2D" id=1]
radius = 57.7963

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 16 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 17 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.2 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "Dead"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 19 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 21 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:_revive")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 13 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 3 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "Revive"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 19 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:_revive")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "set_physics_process"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop_anim"
} ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 100.005

[sub_resource type="CircleShape2D" id=13]
radius = 67.0075

[node name="Zombie Impulse" type="RigidBody2D" groups=["Revive"]]
position = Vector2( 0, 1 )
z_index = 1
mass = 25.0
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
linear_damp = 1.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2, 1 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="Blood" type="Sprite" parent="Sprite"]
visible = false
position = Vector2( -80, -5.5 )
rotation = 1.5708
scale = Vector2( 1.18008, 0.796679 )
z_index = 1
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/Attack = SubResource( 2 )
anims/Dead = SubResource( 12 )
anims/Idle = SubResource( 5 )
anims/RESET = SubResource( 3 )
anims/Revive = SubResource( 14 )

[node name="Attack" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
position = Vector2( 7, 2 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]

[node name="Life" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Life"]
position = Vector2( 5, -1 )
shape = SubResource( 13 )

[node name="ImpactBullet" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 23 )

[node name="Impulse" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 24 )

[connection signal="body_entered" from="Attack" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Attack" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Life" to="." method="_on_Life_body_entered"]
